# oneMKL-GPU-CPU-Sample

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh
src/: CMakeLists.txt  gemm_usm_gpu_cpu.cpp  support.hpp
